# cinderhaven-data-platform

./: .env.example  .gitignore  AUDIT.md  CINDERHAVEN_CANONICAL.md  CLAUDE.md  DECISIONS.md  FAILURES.md  HANDOFF.md  Makefile  PLAN.md  README.md  cinderhaven-plausibility-audit.md  docker-compose.yml  practice_context.md  requirements.txt
.github/workflows/: canonical-drift.yml  ci.yml
cinderhaven/: dbt_project.yml
cinderhaven/macros/: test_positive_value.sql  test_ratio_within_bounds.sql
cinderhaven/seeds/: retailer_requirements.csv
cinderhaven/tests/: assert_channel_contribution_margin_in_band.sql  assert_cogs_positive_margin.sql  assert_deduction_recovery_bounded.sql  assert_deduction_totals_agree.sql  assert_dispute_outcomes_have_evidence_assessment.sql  assert_dispute_recovery_rates_in_band.sql  assert_distributor_operational_chargebacks_have_triggering_event.sql  assert_fct_orders_revenue_matches_staging.sql  (+8 more)
docs/: architecture.md  data-gap-assessment.md  index.html  walkthrough.md
orchestration/: pyproject.toml
orchestration/cinderhaven_orchestration/: __init__.py  assets.py  definitions.py  project.py
scripts/: check_canonical.py  dump_flyio.sh  export_revenue_truth.py  generate_distressed_scenario.py  generate_shopify_orders.py  ingest_sqlite_to_postgres.py  init-db.sh  inspect_sqlite.py  query_canonical.py  reload.py  seed_all.py  seed_config.py  seed_distributor.py  seed_dtc.py  seed_product_master_history.py  seed_retailer.py  seed_scan_data.py  seed_shared.py  seed_void_patterns.py  verify_canonical.py
sql/: raw_schema.sql
(+113 files in other folders)
