[project]
name = "cinderhaven-orchestration"
version = "0.1.0"
description = "Dagster orchestration for the Cinderhaven data platform."
requires-python = ">=3.10"
dependencies = [
    "dagster",
    "dagster-dbt",
    "dagster-postgres",
    "dagster-webserver",
    "dbt-postgres",
]

[tool.dagster]
module_name = "cinderhaven_orchestration.definitions"
